# mux

./: .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  manifest  mcjdgjt75peq1phfeaubpvets4ucgaru  ulsnukigtpkd9namohkq0i1metbds4cp
.agents/docs/: roadmap.md
.agents/handoff/clone-url-host-regression/: bug.md
.beads/: metadata.json
.github/workflows/: ci.yml  release.yml
crates/mux/: Cargo.toml
crates/mux-agent/: Cargo.toml
crates/mux-agent/src/: main.rs
crates/mux-cli/: Cargo.toml
crates/mux-cli/src/: agent.rs  agent_start.rs  attach.rs  create.rs  host.rs  kill.rs  lib.rs  list.rs  mux_home.rs  status.rs
crates/mux-cli/tests/: attach.rs  create.rs  kill.rs  list.rs  status.rs
crates/mux-core/: Cargo.toml
crates/mux-core/src/: error.rs  event_bus.rs  lib.rs  metrics.rs  shortname.rs  types.rs  workdir.rs
crates/mux-core/tests/: naming.rs  types_test.rs
crates/mux-integration-tests/: Cargo.toml
crates/mux-rpc/: Cargo.toml
crates/mux-rpc/src/: client.rs  codec.rs  lib.rs  schema.rs  server.rs
crates/mux-ssh/: Cargo.toml
crates/mux-ssh/src/: lib.rs  transport.rs  trust.rs
crates/mux-state/: Cargo.toml
crates/mux-state/src/: agent_version_repo.rs  fingerprint_repo.rs  host_repo.rs  lib.rs  migrations.rs  model.rs  session_repo.rs  store.rs
crates/mux-tmux/: Cargo.toml
crates/mux-tmux/src/: adapter.rs  lib.rs
crates/mux/src/: main.rs
docker/test-host/: Dockerfile  docker-compose.yml  sshd_config  test_ed25519  test_ed25519.pub
docs/: 00-clean-room-guidelines.md  01-cli-commands.md  02-naming-and-repositories.md  03-local-state.md  04-ssh-trust-and-transport.md  05-agent-rpc-and-lifecycle.md  06-tmux-behavior.md  07-create-list-status-kill-flows.md  08-errors-observability-and-tests.md  guide.md
migrations/: 001-initial-schema.sql
prompts/docs/: README.md  clean-room-guardrails.md  cli-contract.md  integration-tests.md  release.md  rpc-protocol.md  session-flows.md  spec-audit.md  sqlite-state.md  ssh-transport.md  stack-validation.md  tmux-contract.md
scripts/: check.sh  create_beads.sh
tests/integration/: agent.rs  harness.rs  host.rs  init.rs  main.rs  session.rs
tests/observability/: Cargo.toml
tests/observability/tests/: event_bus.rs
