[workspace]
members = [
    "crates/mux",
    "crates/mux-agent",
    "crates/mux-cli",
    "crates/mux-core",
    "crates/mux-state",
    "crates/mux-ssh",
    "crates/mux-rpc",
    "crates/mux-tmux",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Matt Spurrier <mattsp1290@gmail.com>"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
uuid = { version = "1", features = ["v4", "serde"] }  # v4: reserved for session-create (mux-create)
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
# dev-only — reserved for mux-cli e2e integration tests (mux-cli-tests)
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
strip = true
