[package]
name = "mux-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "mux remote agent daemon"

[[bin]]
name = "mux-agent"
path = "src/main.rs"

[dependencies]
mux-rpc = { path = "../mux-rpc" }
mux-tmux = { path = "../mux-tmux" }
anyhow.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
