[package]
name = "mux-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared mux domain types and validation"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
uuid.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
