[package]
name = "mux-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "mux RPC client/server bindings"

[dependencies]
mux-core = { path = "../mux-core" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
