[package]
name = "mux-ssh"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "mux SSH trust, TOFU, and transport layer"

[dependencies]
mux-core = { path = "../mux-core" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
