[package]
name = "mux-tmux"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "mux tmux adapter (direct argv, no shell)"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
